# denshees

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
apps/agents/: .env.example  Dockerfile  README.md  pyproject.toml
apps/agents/src/: __main__.py  agent.py  db.py  server.py  state.py  tools.py
apps/agents/tests/: test_agent.py
apps/denshees-backend/: .env.example  Dockerfile  Dockerfile.monorepo  docker-compose.yml  package.json  tsconfig.json
apps/denshees-backend/src/: index.ts
apps/denshees-backend/src/__tests__/: batch-emails.test.ts  campaign-service.test.ts  email-service.test.ts  fetch-campaigns.test.ts  pipeline-e2e.test.ts
apps/denshees-backend/src/config/: redis.ts
apps/denshees-backend/src/controllers/: imap.controller.ts  misc.controller.ts  tracking.controller.ts
apps/denshees-backend/src/jobs/: authenticate-pocketbase.ts  batch-emails.ts  fetch-campaigns.ts
apps/denshees-backend/src/models/: email.ts
apps/denshees-backend/src/queues/: auth.queue.ts  batch-email.queue.ts  campaign.queue.ts  imap.queue.ts
apps/denshees-backend/src/routes/: imap.routes.ts  (+3 more)
apps/denshees-frontend/: .env.example  Dockerfile  package.json  tailwind.config.js
apps/denshees-frontend/app/: layout.js
apps/denshees-frontend/components/: add-leads-chat.jsx  agent-chat.jsx  credits-display.jsx  lead-finder-chat.jsx  navbar.jsx  sidebar.jsx
apps/denshees-frontend/lib/: apis.js  axios.js  fetcher.js  prisma.js
apps/denshees-frontend/store/: auth.store.js  campaign.store.js
scripts/: setup.sh
(+162 files in other folders)
